tests/miniJava/neg/001569_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new String java ( ) ; } }
